--- a/index.htm
+++ b/index.htm
@@ -8,20 +8,21 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
+    <header class="container">
         <nav class="navbar navbar-expand-lg navbar-light ">
             <a class="navbar-brand" href="index.htm">FELBINGER Quentin</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link" href="#">Expériences</a>
-                    <a class="nav-link" href="#">Formations</a>
-                    <a class="nav-link" href="#">Compétences</a>
+                    <a class="nav-link" href="#experiences">Expériences</a>
+                    <a class="nav-link" href="#formations">Formations</a>
+                    <a class="nav-link" href="#skills">Compétences</a>
                 </div>
             </div>
         </nav>
+    <hr class="lign">
     </header>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
