pofinement header et début main
ajout du titre experience et d'un style hr nouveau !

--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="container">
+    <header class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light ">
             <a class="navbar-brand" href="index.htm">FELBINGER Quentin</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,6 +57,14 @@
             </div>
     <hr class="lign">
     </header>
+    <main class="container-fluid">
+        <article id="experiences">
+            <div class="d-flex justify-content-center mt-10px">
+                <h1>Expériences</h1>
+            </div>            
+            <hr class="lign_s">
+        </article>
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
