image sous topbar
ajout d'un image entre le header et le main.

--- a/index.htm
+++ b/index.htm
@@ -57,9 +57,10 @@
             </div>
     <hr class="lign">
     </header>
+    <div class="banniere mt-5"></div>
     <main class="container-fluid">
         <article id="experiences">
-            <div class="d-flex justify-content-center mt-10px">
+            <div class="d-flex justify-content-center mb-5 mt-5">
                 <h1>Expériences</h1>
             </div>            
             <hr class="lign_s">
