Début des formations

--- a/index.htm
+++ b/index.htm
@@ -60,10 +60,10 @@
     <div class="banniere mt-5"></div>
     <main class="container-fluid">
         <article id="experiences">
+            <hr class="lign_s">
             <div class="d-flex justify-content-center mb-5 mt-5">
                 <h1>Expériences</h1>
-            </div>            
-            <hr class="lign_s">
+            </div>
             <div class="container">	
                 <div class="timeline-item" date-is='2020-2022'>
                     <h2>Formation Développement Web et Web mobile en alternance.</h2>
@@ -96,14 +96,25 @@
             </div>
         </article>
         <article id="formations">
-            <div>
-
+            <hr class="lign_s">
+            <div class="d-flex justify-content-center mb-5 mt-5">
+                <h1>Formations</h1>
             </div>
-            <div>
+            <div class="container d-flex justify-content-around">
+                <div>
+                    <div>
+                        <h3>Baccalauréat Scientifique</h3>
+                    </div>
 
-            </div>
-            <div>
-                
+                </div>
+                <div>
+                    <h3>DU Tremplin réussite</h3>
+
+                </div>
+                <div>
+                    <h3>Baccalauréat Scientifique</h3>
+
+                </div>
             </div>
 
         </article>
