pofin les formations

--- a/index.htm
+++ b/index.htm
@@ -101,14 +101,16 @@
                 <h1>Formations</h1>
             </div>
             <div class="container d-flex justify-content-around">
-                <div>
+                <div class="text-center">
                     <div>
                         <h3>Baccalauréat Scientifique</h3>
                     </div>
+                    <p>Spécialité Mathématique / Obtenu en 2016</p>
 
                 </div>
-                <div>
+                <div class="text-center">
                     <h3>DU Tremplin réussite</h3>
+                    <p>Obtenue en 2017</p>
 
                 </div>
                 <div>
