--- a/index.htm
+++ b/index.htm
@@ -50,7 +50,7 @@
             <div class="collapse multi-collapse" id="collapseExample">
                 <hr class="lign mb-3">
                 <ul>
-                    <li><span>Email :</span> quentin.pisli@gmail.com</li>
+                    <li><span>Email :</span> quentin.pisli/a/gmail.com</li>
                     <li><span>Mobile :</span> 06 99 23 51 69</li>
                     <li><span>Adresse :</span> 7 impasse des primevères 67390 ELSENHEIM</li>
                 </ul>
