maj de la formation
ajout de card

--- a/index.htm
+++ b/index.htm
@@ -68,7 +68,7 @@
                 <div class="timeline-item" date-is='2020-2022'>
                     <h2>Formation Développement Web et Web mobile en alternance.</h2>
                     <p>
-                        Formation à la CCI de Colmar sur le Développement Web en alternace sur deux ans.
+                        Formation à la CCI de Colmar sur le Développement Web en alternance sur deux ans.
                     </p>
                 </div>
 
@@ -89,7 +89,7 @@
                 <div class="timeline-item" date-is='2018'>
                     <h2>Stage en comptabilité et gestion</h2>
                     <p>
-                        Dans le cadre de mon BTS Comptabilité et Gestion j'ai effectuer deux période de stage. La deuxième à eu lieu fin décembre 2018 pendant 2 semaines. La Direction générale des finances publics était mon organisme d'accueil.
+                        Dans le cadre de mon BTS Comptabilité et Gestion j'ai effectué deux périodes de stage. La deuxième à eu lieu fin décembre 2018 pendant 2 semaines. La Direction générale des finances publiques était mon organisme d'accueil.
                     </p>
                 </div>
                 
@@ -100,22 +100,24 @@
             <div class="d-flex justify-content-center mb-5 mt-5">
                 <h1>Formations</h1>
             </div>
-            <div class="container d-flex justify-content-around">
-                <div class="text-center">
-                    <div>
-                        <h3>Baccalauréat Scientifique</h3>
+            <div class="container d-flex justify-content-center align-">
+                <div class="col-6">
+                    <div class="card text-center">
+                            <h3 class="card-title">Baccalauréat Scientifique</h3>
+                        <div class="card-body">
+                            <p>Spécialité Mathématique / Obtenu en 2016</p>
+                            <p>Lycée Dr.Koeberlé</p>
+                        </div>
                     </div>
-                    <p>Spécialité Mathématique / Obtenu en 2016</p>
-
                 </div>
-                <div class="text-center">
-                    <h3>DU Tremplin réussite</h3>
-                    <p>Obtenue en 2017</p>
-
-                </div>
-                <div>
-                    <h3>Baccalauréat Scientifique</h3>
-
+                <div class="col-6">
+                    <div class="card text-center">
+                        <h3 class="card-title">DU Tremplin réussite</h3>
+                        <div class="card-body">
+                            <p>Obtenue en 2017</p>
+                            <p>IUT Robert Schuman à Ilkirch</p>
+                        </div>
+                    </div>
                 </div>
             </div>
 
