--- a/index.htm
+++ b/index.htm
@@ -62,7 +62,7 @@
         <article id="experiences">
             <hr class="lign_s">
             <div class="d-flex justify-content-center mb-5 mt-5">
-                <h1>Expériences</h1>
+                <h1 class="fancy-border">Expériences</h1>
             </div>
             <div class="container">	
                 <div class="timeline-item" date-is='2020-2022'>
@@ -73,7 +73,7 @@
                 </div>
 
                 <div class="timeline-item" date-is='2020'>
-                    <h2>Animateur en centre d'acceuil</h2>
+                    <h2>Animateur en centre d'accueil</h2>
                     <p>
                         Pendant les 3 premières semaines d'août j'ai été animateur au périscolaire de Marckolsheim. Activité et repas j'étais présent de 8h à 18h avec les enfants.
                     </p>
@@ -82,7 +82,7 @@
                 <div class="timeline-item" date-is='2019-2020'>
                     <h2>Service Civique à la MJC de Marckolsheim</h2>
                     <p>
-                        Du 02 septembre 2019 au 31 juillet 2020 j'ai effectué un service civique à la MJC de Marckolsheim. PLus précisément dans la branche du cinéma associatif où j'ai collaboré avec le responsable culturel. J'ai du m'moccuper de la gestion des DCP et des KDM mais aussi la projection, l'acceuil et la caisse du cinéma.
+                        Du 02 septembre 2019 au 31 juillet 2020 j'ai effectué un service civique à la MJC de Marckolsheim. PLus précisément dans la branche du cinéma associatif où j'ai collaboré avec le responsable culturel. J'ai du m'moccuper de la gestion des DCP et des KDM mais aussi la projection, l'accueil et la caisse du cinéma.
                     </p>
                 </div>
 
@@ -103,7 +103,7 @@
             <div class="container d-flex justify-content-center align-">
                 <div class="col-6">
                     <div class="card text-center">
-                            <h3 class="card-title">Baccalauréat Scientifique</h3>
+                            <h3 class="card-title mt-4">Baccalauréat Scientifique</h3>
                         <div class="card-body">
                             <p>Spécialité Mathématique / Obtenu en 2016</p>
                             <p>Lycée Dr.Koeberlé</p>
@@ -112,7 +112,7 @@
                 </div>
                 <div class="col-6">
                     <div class="card text-center">
-                        <h3 class="card-title">DU Tremplin réussite</h3>
+                        <h3 class="card-title mt-4">DU Tremplin réussite</h3>
                         <div class="card-body">
                             <p>Obtenue en 2017</p>
                             <p>IUT Robert Schuman à Ilkirch</p>
