--- a/index.htm
+++ b/index.htm
@@ -62,7 +62,7 @@
         <article id="experiences">
             <hr class="lign_s">
             <div class="d-flex justify-content-center mb-5 mt-5">
-                <h1 class="fancy-border">Expériences</h1>
+                <h1>Expériences</h1>
             </div>
             <div class="container">	
                 <div class="timeline-item" date-is='2020-2022'>
@@ -102,7 +102,7 @@
             </div>
             <div class="container d-flex justify-content-center align-">
                 <div class="col-6">
-                    <div class="card text-center">
+                    <div class="card text-center bk_r">
                             <h3 class="card-title mt-4">Baccalauréat Scientifique</h3>
                         <div class="card-body">
                             <p>Spécialité Mathématique / Obtenu en 2016</p>
@@ -111,7 +111,7 @@
                     </div>
                 </div>
                 <div class="col-6">
-                    <div class="card text-center">
+                    <div class="card text-center bk_r">
                         <h3 class="card-title mt-4">DU Tremplin réussite</h3>
                         <div class="card-body">
                             <p>Obtenue en 2017</p>
@@ -120,7 +120,13 @@
                     </div>
                 </div>
             </div>
+        </article>
+        <article id="skills">
+            <hr class="lign_s">
+            <div class="d-flex justify-content-center mb-5 mt-5">
+                <h1>Compétences</h1>
 
+            </div>
         </article>
     </main>
 
