--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
 <body>
     <header class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light ">
-            <a class="navbar-brand" href="index.htm">FELBINGER Quentin</a>
+            <a class="navbar-brand" href="index.htm">FELBINGER Quentin - 21 ans</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -37,7 +37,7 @@
                           </svg>
                         Compétences
                     </a>
-                    <a class="nav-link dropdown-toggle" id="nav_h" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                    <a class="nav-link dropdown-toggle" id="push_ta" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
                         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pencil-square mb-1" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                         <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
                         <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
@@ -95,7 +95,7 @@
                 
             </div>
         </article>
-        <article id="formations">
+        <article id="formations" class="mb-5">
             <hr class="lign_s">
             <div class="d-flex justify-content-center mb-5 mt-5">
                 <h1>Formations</h1>
@@ -121,7 +121,7 @@
                 </div>
             </div>
         </article>
-        <article id="skills">
+        <article id="skills" class="mt-5 mb-5">
             <hr class="lign_s">
             <div class="d-flex justify-content-center mb-5 mt-5">
                 <h1>Compétences</h1>
