--- a/index.htm
+++ b/index.htm
@@ -58,7 +58,7 @@
     <hr class="lign">
     </header>
     <div class="banniere mt-5"></div>
-    <main class="container-fluid">
+    <main class="container-fluid no_pad">
         <article id="experiences">
             <hr class="lign_s">
             <div class="d-flex justify-content-center mb-5 mt-5">
@@ -94,33 +94,35 @@
                 </div>
                 
             </div>
-        </article>
-        <article id="formations" class="mb-5">
-            <hr class="lign_s">
-            <div class="d-flex justify-content-center mb-5 mt-5">
-                <h1>Formations</h1>
-            </div>
-            <div class="container d-flex justify-content-center align-">
-                <div class="col-6">
-                    <div class="card text-center bk_r">
-                            <h3 class="card-title mt-4">Baccalauréat Scientifique</h3>
-                        <div class="card-body">
-                            <p>Spécialité Mathématique / Obtenu en 2016</p>
-                            <p>Lycée Dr.Koeberlé</p>
+        </article>        
+        <hr class="lign_s">
+        <div class="banniere_for">
+            <article id="formations" class="mb-5">
+                <div class="d-flex justify-content-center mb-5 mt-5">
+                    <h1>Formations</h1>
+                </div>
+                <div class="container d-flex justify-content-center align-">
+                    <div class="col-6">
+                        <div class="card text-center bk_r">
+                                <h3 class="card-title mt-4">Baccalauréat Scientifique</h3>
+                            <div class="card-body">
+                                <p>Spécialité Mathématique / Obtenu en 2016</p>
+                                <p>Lycée Dr.Koeberlé</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="card text-center bk_r">
+                            <h3 class="card-title mt-4">DU Tremplin réussite</h3>
+                            <div class="card-body">
+                                <p>Obtenue en 2017</p>
+                                <p>IUT Robert Schuman à Ilkirch</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-6">
-                    <div class="card text-center bk_r">
-                        <h3 class="card-title mt-4">DU Tremplin réussite</h3>
-                        <div class="card-body">
-                            <p>Obtenue en 2017</p>
-                            <p>IUT Robert Schuman à Ilkirch</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </article>
+            </article>
+        </div>
         <article id="skills" class="mt-5 mb-5">
             <hr class="lign_s">
             <div class="d-flex justify-content-center mb-5 mt-5">
