--- a/index.htm
+++ b/index.htm
@@ -64,7 +64,7 @@
             <div class="d-flex justify-content-center mb-5 mt-5">
                 <h1>Expériences</h1>
             </div>
-            <div class="container">	
+            <div class="container mb-5">	
                 <div class="timeline-item" date-is='2020-2022'>
                     <h2>Formation Développement Web et Web mobile en alternance.</h2>
                     <p>
@@ -123,14 +123,33 @@
                 </div>
             </article>
         </div>
-        <article id="skills" class="mt-5 mb-5">
-            <hr class="lign_s">
-            <div class="d-flex justify-content-center mb-5 mt-5">
-                <h1>Compétences</h1>
-
-            </div>
-        </article>
+        <div class="br_b">
+            <article id="skills">
+                <div class="d-flex justify-content-center">
+                    <h1>Compétences</h1>
+                </div>
+                <div class="progress">
+                    <div class="progress-bar bk_r" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">HTML/CSS</div>
+                </div>
+                <div class="progress">
+                    <div class="progress-bar bk_r" role="progressbar" style="width: 48%" aria-valuenow="48" aria-valuemin="0" aria-valuemax="100">BOOTSTRAP</div>
+                    </div>
+                <div class="progress">
+                    <div class="progress-bar bk_r" role="progressbar" style="width: 57%" aria-valuenow="57" aria-valuemin="0" aria-valuemax="100">INDESIGN</div>
+                </div>
+                <div class="progress">
+                    <div class="progress-bar bk_r" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">SUITE OFFICE</div>
+                </div>
+                <div class="progress nm">
+                    <div class="progress-bar bk_r" role="progressbar" style="width: 45%" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">PHOTOSHOP</div>
+                </div>
+                <br>
+            </article>
+        </div>
     </main>
+    <footer class="br_b d-flex justify-content-center footer">
+        <p>Mention légale / images-Unsplash / freddie marriage, AltumCode</p>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
