--- a/index.htm
+++ b/index.htm
@@ -37,6 +37,9 @@
                           </svg>
                         Compétences
                     </a>
+                    <a href="#monprofil" id="nav_h" data-toggle="collapse" class="nav-link dropdown-toggle" role="button" aria-expanded="false" aria-controls="monprofil">
+                        Mon profil
+                    </a>
                     <a class="nav-link dropdown-toggle" id="push_ta" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
                         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pencil-square mb-1" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                         <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
@@ -47,14 +50,20 @@
                 </div>
             </div>
         </nav>
-            <div class="collapse multi-collapse" id="collapseExample">
-                <hr class="lign mb-3">
-                <ul>
-                    <li><span>Email :</span> quentin.pisli/a/gmail.com</li>
-                    <li><span>Mobile :</span> 06 99 23 51 69</li>
-                    <li><span>Adresse :</span> 7 impasse des primevères 67390 ELSENHEIM</li>
-                </ul>
+        <div class="collapse multi-collapse text-center" id="monprofil">            
+            <hr class="lign mb-3">
+            <div class="container">
+                <p>Passioné, curieux, un esprit d'équipe et avec de l'autonomie j’ai découvert le développement web grâce à la formation Grafikart.fr qui est un freelancer qui propose des formations gratuites sur internet. Et c’est pourquoi je me suis inscrit à la formation que propose la CCI.</p>
             </div>
+        </div>
+        <div class="collapse multi-collapse" id="collapseExample">
+            <hr class="lign mb-3">
+            <div class="container text-center">
+                <p><span>Email :</span> quentin.pisli/a/gmail.com</p>
+                <p><span>Mobile :</span> 06 99 23 51 69</p>
+                <p><span>Adresse :</span> 7 impasse des primevères 67390 ELSENHEIM</p>
+            </div>
+        </div>
     <hr class="lign">
     </header>
     <div class="banniere mt-5"></div>
@@ -96,12 +105,11 @@
             </div>
         </article>        
         <hr class="lign_s">
-        <div class="banniere_for">
-            <article id="formations" class="mb-5">
+            <article id="formations" class="banniere_for">
                 <div class="d-flex justify-content-center mb-5 mt-5">
                     <h1>Formations</h1>
                 </div>
-                <div class="container d-flex justify-content-center align-">
+                <div class="container d-flex justify-content-center">
                     <div class="col-6">
                         <div class="card text-center bk_r">
                                 <h3 class="card-title mt-4">Baccalauréat Scientifique</h3>
@@ -122,9 +130,7 @@
                     </div>
                 </div>
             </article>
-        </div>
-        <div class="br_b">
-            <article id="skills">
+            <article id="skills" class="br_b">
                 <div class="d-flex justify-content-center">
                     <h1>Compétences</h1>
                 </div>
@@ -145,10 +151,9 @@
                 </div>
                 <br>
             </article>
-        </div>
     </main>
-    <footer class="br_b d-flex justify-content-center footer">
-        <p>Mention légale / images-Unsplash / freddie marriage, AltumCode</p>
+    <footer class="br_b d-flex justify-content-center footer text-center">
+        <p>Mention légale / images-Unsplash / Bernard Tuck, AltumCode</p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
