maj nav et changement skills
Couleur rouge pour la nav et ajout des qualités humaines

--- a/index.htm
+++ b/index.htm
@@ -53,7 +53,7 @@
         <div class="collapse multi-collapse text-center" id="monprofil">            
             <hr class="lign mb-3">
             <div class="container">
-                <p>Passioné, curieux, un esprit d'équipe et avec de l'autonomie j’ai découvert le développement web grâce à la formation Grafikart.fr qui est un freelancer qui propose des formations gratuites sur internet. Et c’est pourquoi je me suis inscrit à la formation que propose la CCI.</p>
+                <p>Passioné, j’ai découvert le développement web grâce à la formation Grafikart.fr qui est un freelancer qui propose des formations gratuites sur internet. Et c’est pourquoi je me suis inscrit à la formation que propose la CCI.</p>
             </div>
         </div>
         <div class="collapse multi-collapse" id="collapseExample">
@@ -134,20 +134,50 @@
                 <div class="d-flex justify-content-center">
                     <h1>Compétences</h1>
                 </div>
-                <div class="progress">
-                    <div class="progress-bar bk_r" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">HTML/CSS</div>
-                </div>
-                <div class="progress">
-                    <div class="progress-bar bk_r" role="progressbar" style="width: 48%" aria-valuenow="48" aria-valuemin="0" aria-valuemax="100">BOOTSTRAP</div>
+                <div>
+                    <div class="d-flex justify-content-center competence align-items-center">
+                        <p>HTML/CSS</p>
+                        <div class="progress">
+                            <div class="progress-bar bk_r" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
                     </div>
-                <div class="progress">
-                    <div class="progress-bar bk_r" role="progressbar" style="width: 57%" aria-valuenow="57" aria-valuemin="0" aria-valuemax="100">INDESIGN</div>
+                    <div class="d-flex justify-content-center competence align-items-center">
+                        <p>BOOTSTRAP</p>
+                        <div class="progress">
+                            <div class="progress-bar bk_r" role="progressbar" style="width: 48%" aria-valuenow="48" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-center competence align-items-center">
+                        <p>INDESIGN</p>
+                        <div class="progress">
+                            <div class="progress-bar bk_r" role="progressbar" style="width: 57%" aria-valuenow="57" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-center competence align-items-center">                        
+                        <p>SUITE OFFICE</p>
+                        <div class="progress">
+                            <div class="progress-bar bk_r" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-center competence align-items-center">
+                        <p>PHOTOSHOP</p>
+                        <div class="progress nm">
+                            <div class="progress-bar bk_r" role="progressbar" style="width: 45%" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
                 </div>
-                <div class="progress">
-                    <div class="progress-bar bk_r" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">SUITE OFFICE</div>
+                <br>
+            </article>
+            <article class="br_b nmt">
+                <div class="d-flex justify-content-center">
+                    <h1>Qualités humaines</h1>
                 </div>
-                <div class="progress nm">
-                    <div class="progress-bar bk_r" role="progressbar" style="width: 45%" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">PHOTOSHOP</div>
+                <br>
+                <div class="text-center">
+                    <p>Esprit d'équipe</p>
+                    <p>Autodidacte</p>
+                    <p>Passionné</p>
+                    <p>Curieux</p>
                 </div>
                 <br>
             </article>
