pitite retouche skills
plus de border radius sur les compétences et agrandissment de la police dans les qualités humaines.

--- a/index.htm
+++ b/index.htm
@@ -173,7 +173,7 @@
                     <h1>Qualités humaines</h1>
                 </div>
                 <br>
-                <div class="text-center">
+                <div class="text-center beauti-text">
                     <p>Esprit d'équipe</p>
                     <p>Autodidacte</p>
                     <p>Passionné</p>
