--- a/index.htm
+++ b/index.htm
@@ -169,7 +169,7 @@
                 <br>
             </article>
             <article class="br_b nmt">
-                <div class="d-flex justify-content-center">
+                <div class="d-flex justify-content-center text-center">
                     <h1>Qualités humaines</h1>
                 </div>
                 <br>
