fin de la timeline expérience
ajout du stage chez wienerberger

--- a/index.htm
+++ b/index.htm
@@ -129,6 +129,20 @@
                         CDD de 2 mois formation en interne pour cariste de catégorie 4 pour travailler dans le secteur de laminage à chaud
                     </p>
                 </div>
+
+                <div class="timeline-item" date-is='2017 juin'>
+                    <h2>Suivi du service informatique de Wienerberger</h2>
+                    <p>
+                        En 2017, j'ai souhaiter me réorienter et c'est pourquoi je me suis inscrit au DU tremplin réussite à l'IUT Robert Schuman de Strasbourg.
+                    </p>
+                    <p>
+                        Cette formation consiste à nous aider dans notre choix d'orientation, notre méthode de travail et de ne pas perdre le semestre de printemps lors d'une réorientation.
+                    </p>
+                    <p>
+                        J'ai donc effectuer un stage de deux semaines dans le service informatique du siège social de Wienerberger et accomplis différentes missions comme:<br>
+                        Le scan de sécurité des laptops pour les salariés mobiles - Monter une image (Windows Embedded) sur des clients légers.
+                    </p>
+                </div>
                 
             </div>
         </article>        
