--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello world</title>
+    <title>FELBINGER Quentin CV</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -53,7 +53,10 @@
         <div class="collapse multi-collapse text-center" id="monprofil">            
             <hr class="lign mb-3">
             <div class="container">
-                <p>Passioné, j’ai découvert le développement web grâce à la formation Grafikart.fr qui est un freelancer qui propose des formations gratuites sur internet. Et c’est pourquoi je me suis inscrit à la formation que propose la CCI.</p>
+                <p>
+                    Passionné par le développement Web que j’ai voulu appréhender concrètement en suivant le
+                    programme Grafikart.fr, je me suis inscrit à cette même formation proposée par la CCI de Colmar.
+                </p>
             </div>
         </div>
         <div class="collapse multi-collapse" id="collapseExample">
@@ -75,9 +78,10 @@
             </div>
             <div class="container mb-5">	
                 <div class="timeline-item" date-is='2020-2022'>
-                    <h2>Développement Web et Web mobile en alternance. (en cours)</h2>
+                    <h2>Développement Web et Web mobile en alternance.</h2>
                     <p>
-                        Formation à la CCI de Colmar sur le Développement Web en alternance sur deux ans.
+                        Actuellement en formation à la CCI de Colmar sur le Développement Web en alternance sur deux ans, nous avons déjà eu 3 semaines de cours et maintenant en recherche d'un contrat d'apprentissage
+                        en alternance.
                     </p>
                     <p>
                         Les principaux domaines que l'on va étudier sont le front-end:<br> Maquetter une application - réaliser une interface utilisateur web statique et adaptable (HTML/CSS) - Utilisation de GIT -
@@ -95,7 +99,7 @@
                 <div class="timeline-item" date-is='2020'>
                     <h2>Animateur en centre d'accueil</h2>
                     <p>
-                        Pendant les 3 premières semaines d'août j'ai été animateur au périscolaire de Marckolsheim pour un stage qui doit valider mon BAFA. Activité et repas, j'étais présent de 8h à 18h avec les enfants.
+                        Pendant les 3 premières semaines d'août j'ai été animateur au périscolaire de Marckolsheim pour un stage qui doit valider mon BAFA.
                     </p>
                 </div>
                 
@@ -165,7 +169,7 @@
                     <div class="card text-center bk_r">
                         <h3 class="card-title mt-4">DU Tremplin réussite</h3>
                         <div class="card-body">
-                            <p>Obtenue en 2017</p>
+                            <p>Obtenu en 2017</p>
                             <p>IUT Robert Schuman à Ilkirch</p>
                         </div>
                     </div>
@@ -216,10 +220,10 @@
             </div>
             <br>
             <div class="text-center beauti-text">
-                <p>Esprit d'équipe</p>
-                <p>Autodidacte</p>
-                <p>Passionné</p>
                 <p>Curieux</p>
+                <p>Esprit d'équipe</p>
+                <p>Déterminé</p>
+                <p>Enthousiaste</p>
             </div>
             <br>
         </article>
