premier essaie déroulant expérience

--- a/index.htm
+++ b/index.htm
@@ -83,39 +83,46 @@
             <div class="container mb-5">	
                 <div class="timeline-item" date-is='2020-2022'>
                     <h2>Développement Web et Web mobile en alternance - CCI de Colmar</h2>
-                    <p>
-                        Contenu de la formation DWWM :
-                    </p>
-                    <p>
-                        Front-end :
-                    </p>
-                    <ul>
-                        <li>Maquettage d'une application</li>
-                        <li>Réalisation d'une interface utilisateur web statique et adaptable (HTML/CSS)</li>
-                        <li>Utilisation de GIT</li>
-                        <li>Wordpress</li>
-                        <li>Création de deux projets (site vitrine statique & site wordpress)</li>
-                    </ul>
-                    <p>                        
-                        Back-end :
-                    </p>
-                    <ul>
-                        <li>Création d'une base de données (SQL / MySQL / UML)</li>
-                        <li>Développement des composants d'accès aux données (MVC / APIS)</li>
-                        <li>Développement de la partie back-end d'une application web ou web mobile (PHP Objet / PHP Synfony / codage collaboratif et versionning)</li>
-                        <li>e-commerce et CMS prestashop</li>
-                        <li>Création de deux projet web (PHP OO MVC & CMS Prestashop)</li>
-                    </ul>
-                    <p>
-                        Compétences transversales :
-                    </p>
-                    <ul>
-                        <li>Gestion de projets</li>
-                        <li>Algorithmique</li>
-                        <li>Le côté serveur</li>
-                        <li>Anglais informatique</li>
-                        <li>Expression écrite / documentation</li>
-                    </ul>
+                    <h5>
+                        <a class="mbtn" data-toggle="collapse" href="#DWWM" role="button" aria-expanded="false" aria-controls="DWWM">
+                            Contenu de la formation DWWM
+                        </a>
+                    </h5>
+                    <div class="collapse" id="DWWM">
+                        <div class="card card-body">
+                            
+                            <p>
+                                Front-end :
+                            </p>
+                            <ul>
+                                <li>Maquettage d'une application</li>
+                                <li>Réalisation d'une interface utilisateur web statique et adaptable (HTML/CSS)</li>
+                                <li>Utilisation de GIT</li>
+                                <li>Wordpress</li>
+                                <li>Création de deux projets (site vitrine statique & site wordpress)</li>
+                            </ul>
+                            <p>                        
+                                Back-end :
+                            </p>
+                            <ul>
+                                <li>Création d'une base de données (SQL / MySQL / UML)</li>
+                                <li>Développement des composants d'accès aux données (MVC / APIS)</li>
+                                <li>Développement de la partie back-end d'une application web ou web mobile (PHP Objet / PHP Synfony / codage collaboratif et versionning)</li>
+                                <li>e-commerce et CMS prestashop</li>
+                                <li>Création de deux projet web (PHP OO MVC & CMS Prestashop)</li>
+                            </ul>
+                            <p>
+                                Compétences transversales :
+                            </p>
+                            <ul>
+                                <li>Gestion de projets</li>
+                                <li>Algorithmique</li>
+                                <li>Le côté serveur</li>
+                                <li>Anglais informatique</li>
+                                <li>Expression écrite / documentation</li>
+                            </ul>
+                    </div>
+                </div>
 
                 </div>
                 
