--- a/index.htm
+++ b/index.htm
@@ -243,7 +243,7 @@
                 <div class="d-flex justify-content-center competence align-items-center">
                     <p>HTML/CSS</p>
                     <div class="progress">
-                        <div class="progress-bar bk_r" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-bar bk_r" role="progressbar" style="width: 67%" aria-valuenow="67" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </div>
                 <div class="d-flex justify-content-center competence align-items-center">
@@ -255,7 +255,7 @@
                 <div class="d-flex justify-content-center competence align-items-center">
                     <p>INDESIGN</p>
                     <div class="progress">
-                        <div class="progress-bar bk_r" role="progressbar" style="width: 57%" aria-valuenow="57" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-bar bk_r" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </div>
                 <div class="d-flex justify-content-center competence align-items-center">                        
@@ -267,7 +267,7 @@
                 <div class="d-flex justify-content-center competence align-items-center">
                     <p>PHOTOSHOP</p>
                     <div class="progress nm">
-                        <div class="progress-bar bk_r" role="progressbar" style="width: 45%" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress-bar bk_r" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                 </div>
             </div>
@@ -303,7 +303,7 @@
         </div>
     </main>
     <footer class="br_b d-flex justify-content-center footer text-center">
-        <p>Mention légale / images-Unsplash / Bernard Tuck, AltumCode</p>
+        <p>Mention légale / images-Unsplash-Pexels / Bernard Tuck, Negative Space</p>
     </footer>
     
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
