ajustement du contenu

--- a/index.htm
+++ b/index.htm
@@ -197,7 +197,7 @@
                                 Cette formation consiste à nous aider dans notre choix d'orientation, notre méthode de travail et de ne pas perdre le semestre de printemps lors d'une réorientation.
                             </p>
                             <p>
-                                J'ai donc effectuer un stage de deux semaines dans le service informatique du siège social de Wienerberger et accomplis différentes missions comme :
+                                J'ai effectué une immersion de deux semaines dans le service informatique du siège social de Wienerberger et accomplis différentes missions comme :
                             </p>
                             <ul>
                                 <li>Le scan de sécurité des laptops pour les salariés mobiles</li>
