--- a/index.htm
+++ b/index.htm
@@ -157,9 +157,9 @@
                                 <ul>
                                     <li>Capacité à utiliser un logicel de projection</li>
                                 </ul>
-                                <li>Organisation de scéances cinéma</li>
+                                <li>Organisation de séances cinéma</li>
                                 <ul>
-                                    <li>S'adapter à un suivis logistique</li>
+                                    <li>S'adapter à un suivi logistique</li>
                                     <li>Avoir une bonne anticipation</li>
                                     <li>Collaborer entre salariés et bénévoles</li>
                                 </ul>
@@ -197,7 +197,7 @@
                                 Cette formation consiste à nous aider dans notre choix d'orientation, notre méthode de travail et de ne pas perdre le semestre de printemps lors d'une réorientation.
                             </p>
                             <p>
-                                J'ai effectué une immersion de deux semaines dans le service informatique du siège social de Wienerberger et accomplis différentes missions comme :
+                                J'ai effectué une immersion de deux semaines dans le service informatique du siège social de Wienerberger et accompli différentes missions comme :
                             </p>
                             <ul>
                                 <li>Le scan de sécurité des laptops pour les salariés mobiles</li>
@@ -220,7 +220,7 @@
                         <h3 class="card-title mt-4">Baccalauréat Scientifique</h3>
                         <div class="card-body">
                             <p>Spécialité Mathématique / Obtenu en 2016</p>
-                            <p>Lycée Dr.Koeberlé</p>
+                            <p>Lycée Dr Koeberlé</p>
                         </div>
                     </div>
                 </div>
