--- a/index.htm
+++ b/index.htm
@@ -279,11 +279,19 @@
                     <h1>Qualités humaines</h1>
                 </div>
                 <br>
-                <div class="text-center beauti-text">
-                    <p>Curieux</p>
-                    <p>Esprit d'équipe</p>
-                    <p>Déterminé</p>
-                    <p>Enthousiaste</p>
+                <div class="beauti-text d-flex justify-content-center">
+                    <div class="text-center mr-5">
+                        <p>Curieux</p>
+                        <p>Esprit d'équipe</p>
+                        <p>Déterminé</p>
+                        <p>Enthousiaste</p>
+                    </div>
+                    <div class="text-center ml-5">
+                        <p>Dynamique</p>
+                        <p>Organisé</p>
+                        <p>Autonome</p>
+                        <p>Créatif</p>
+                    </div>
                 </div>
                 <br>
             </article>
@@ -293,10 +301,10 @@
                 </div>
                 <br>
                 <div class="text-center beauti-text">
-                    <p>Magicien</p>
-                    <p>Saxophoniste</p>
-                    <p>Jeux vidéo - film/série</p>
-                    <p>Jeux de rôle</p>
+                        <p>Magicien</p>
+                        <p>Saxophoniste</p>
+                        <p>Jeux vidéo - film/série</p>
+                        <p>Jeux de rôle</p>
                 </div>
                 <br><br>
             </article>
