--- a/index.htm
+++ b/index.htm
@@ -273,7 +273,7 @@
             </div>
             <br><br>
         </article>
-        <div class="d-flex justify-content-around">
+        <div class="d-flex justify-content-around med">
             <article class="br_b nmt qual">
                 <div class="d-flex justify-content-center text-center">
                     <h1>Qualités humaines</h1>
