--- a/index.htm
+++ b/index.htm
@@ -177,7 +177,7 @@
                 </div>
                 
                 <div class="timeline-item" date-is='2018 - 10 semaines'>
-                    <h2>Stage - BTS comptabilité et gestion - DGFiP</h2>
+                    <h2>Contrôleur de gestion - BTS comptabilité et gestion - DGFiP</h2>
                 </div>
 
                 <div class="timeline-item" date-is='2018 juillet - août'>
