--- a/CV/cv.htm
+++ b/CV/cv.htm
@@ -73,7 +73,7 @@
     <main class="container-fluid no_pad">
         <article id="experiences">
             <div class="d-flex justify-content-center mb-5 mt-5 flex-column text-center">
-                <h1>En recherche d’un Contrat d’Apprentissage en Alternance</h1>
+                <h1>Actuellement en Contrat d’Apprentissage en Alternance</h1>
                 <h2>Formation Développement Web et Web mobile</h2>
             </div>
             <hr class="lign_s">
